syntax = "proto3";
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

service HelloWorld {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}